--- a/src/main/resources/templates/fragments/includes.html
+++ b/src/main/resources/templates/fragments/includes.html
@@ -4,7 +4,7 @@
 <head th:fragment="indexHead">
     <meta charset="UTF-8"/>
     <title>gigFinder</title>
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Pacifico" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/webjars/Magnific-Popup/1.0.0/magnific-popup.css}"/>
