--- a/src/main/resources/templates/gigDetails.html
+++ b/src/main/resources/templates/gigDetails.html
@@ -2,162 +2,162 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body th:inline="text" id="gigPage" class="gradient-background ">
-<div th:include="fragments/navbar :: navHome"></div>
+<body th:inline="text" id="gig-page" class="grey lighten-1 ">
+<main  >
+    <div class="profileBanner">
+    <div th:include="fragments/navbar :: navHome"></div>
 
-    <main  class="gigDetails">
-        <div class="background-image hide-on-med-and-down" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+')no-repeat center ; background-size: cover;' "></div>
+        <section class="indigo darken-4 blur" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
 
-        <div class="container">
-            <div class="gig ">
-                <div class="gig-nav">
-                    <nav th:if="${gig.companyProfile.user.username == user.username}" class="gigNav transparent ">
+        </section>
+    </div>
 
-                        <ul>
-                            <li class="col s4">
-                                <a class="waves-effect waves-light btn-floating modal-trigger" href="#gigUpdate">
-                                    <i class="material-icons  tooltipped" data-position="top" data-delay="50" data-tooltip="Update Gig">edit</i>
-                                </a>
+    <div class="container">
 
-                            </li>
-                            <li class="col s4">
-                                <a class="waves-effect waves-light btn-floating modal-trigger" href="#gigDelete">
-                                    <i class="material-icons  tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Gig">delete</i>
-                                </a>
+        <div class="gig ">
+            <div th:if="${gig.companyProfile.user.username == user.username}" class="gig-nav">
+                <nav  class="gigNav transparent ">
 
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="gig-info">
-                    <div class="gig-left">
-                        <section class="gig-image white" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+') no-repeat center ; background-size: cover'">
-                            <div class="details-row white-text">
-                                <p class="white-text gigTitle"><b>[[${gig.gigTitle}]]</b></p>
+                    <ul>
+                        <li class="col s4">
+                            <a class="waves-effect waves-light btn-floating" th:href="'/company/gig/' + @{${gig.id}} + '/update'">
+                                <i class="material-icons  tooltipped" data-position="top" data-delay="50" data-tooltip="Update Gig">edit</i>
+                            </a>
 
+                        </li>
+                        <li class="col s4">
+                            <a class="waves-effect waves-light btn-floating modal-trigger" href="#gigDelete">
+                                <i class="material-icons  tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Gig">delete</i>
+                            </a>
 
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="gig-info">
+                    <section class="gig-image white" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+') no-repeat center ; background-size: cover'">
+                        <div class="details-row white-text">
 
-                            </div>
-
-                        </section>
-                        <section class="time-description">
-
-                            <section class="gigDescript white">
-                                <div class="section">
-                                    <p class="gigType">[[${gig.gigType}]]</p>
-                                </div>
-                                <div class="divider"></div>
-                                <div class="section">
-                                    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">event</i>
-                                        [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] <br/>
-                                        <span style="margin-left: 3px;" th:if="${gig.gigStart != gig.gigEnd}"> [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</span>
-                                    </p>
-                                </div>
-                                <div class="divider"></div>
-
-                                <div class="section">
-                                    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">access_time</i>[[${gig.timeStart}]] to [[${gig.timeEnd}]]</p>
-
-                                </div>
-                                <div class="divider"></div>
-
-                                <div class="section">
-                                    <p>[[${gig.gigDescription}]]</p>
-
-                                </div>
+                            <p class="white-text gigTitle"><b>[[${gig.gigTitle}]]</b></p>
 
 
 
-                            </section>
+                        </div>
 
+                    </section>
+                    <section class="time-description">
 
+                        <section class="gigDescript white">
+                                <p class="gigType">[[${gig.gigType}]]</p>
 
-                            <section class="gig-map" th:style="'background:url('+ @{${url}}+')no-repeat center ; background-size: cover;'">
-                                <div class="locationBox left">
-                                    <div >
-                                        [[${gig.gigLocation}]]
-                                    </div>
-                                    <div >
-                                        <a th:href="'https://maps.google.com/maps?q='+ @{${gig.gigLocation}}" target="_blank" class="waves-effect waves-light btn-floating tooltipped popup-gmaps" data-position="top" data-delay="50" data-tooltip="Directions"><i class="material-icons">map</i></a>
-                                    </div>
-                                </div>
-                            </section>
+                            <div class="divider"></div>
+                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">event</i>
+                                    [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] <br/>
+                                    <span style="margin-left: 3px;" th:if="${gig.gigStart != gig.gigEnd}"> [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</span>
+                                </p>
+                            <div class="divider"></div>
+
+                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">access_time</i>[[${gig.timeStart}]] to [[${gig.timeEnd}]]</p>
+
+                            <div class="divider"></div>
+
+                                <p>[[${gig.gigDescription}]]</p>
 
 
 
 
                         </section>
-                    </div>
-                    <div class="hire-right grey lighten-3">
-                            <div th:if="${gig.gigHired} == true" >
-                                <div class="center-align">
-                                    <h4 >Hired<i class="checkmark material-icons">check</i></h4>
-                                    <div th:each="hired : ${hired}">
 
-                                        <a th:href="'/find-bands/' + @{${hired.musicianProfile.id}}" >
-                                            <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.musicianProfile.profPicImage}} " class="cardImage hiredImage circle"/>
-                                            <h5 class="black-text"><b>[[${hired.musicianProfile.firstName}]] [[${hired.musicianProfile.lastName}]]</b></h5>
-                                        </a>
-                                    </div>
+
+
+                        <section class="gig-map" th:style="'background:url('+ @{${url}}+')no-repeat center ; background-size: cover;'">
+                            <div class="locationBox left">
+                                <div >
+                                    [[${gig.gigLocation}]]
+                                </div>
+                                <div >
+                                    <a th:href="'https://maps.google.com/maps?q='+ @{${gig.gigLocation}}" target="_blank" class="waves-effect waves-light btn-floating tooltipped popup-gmaps" data-position="top" data-delay="50" data-tooltip="Directions"><i class="material-icons">map</i></a>
                                 </div>
                             </div>
-                            <div th:if="${gig.gigHired} != true">
-                                    <div class="section">
-                                        <p class="center-align appliedNum"><span class="orange-text text-accent-4">[[${gig.getMusicianApplyGigs().size()}]]</span> Musicians Applied </p>
-                                    </div>
-                                    <div class="section ">
-                                        <div class="row">
-                                            <div th:each="applied : ${applied}">
-                                                <div class="container">
-                                                    <div class="col s6 m4">
-                                                        <a th:href="'/find-bands/' + @{${applied.musicianProfile.id}}" >
-                                                            <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}}" alt="" class="bandInfo hoverable bandApplied" />
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
+                        </section>
 
-                                        </div>
 
-                                    </div>
-                                    <div  th:if="${gig.companyProfile.user.username == user.username}" class="section">
-                                        <div class="center-align">
-                                            <a class='dropdown-button logBtn hireBtn hoverable' href='#' data-activates='hireDrop'>Select to Hire</a>
 
-                                        </div>
 
-                                        <ul id="hireDrop" class="dropdown-content" >
-                                            <li th:each="applied : ${applied}">
-                                                <a th:href="'/company/gig/' + @{${gig.id}} + '/confirm-hire/musician/' + @{${applied.musicianProfile.id}}" data-constrainwidth="false">
-                                                    <div class="hireRow">
-                                                        <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}} " class="navAvatar circle"/>
-                                                        <p>[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</p>
-                                                        <div class="divider"></div>
-                                                    </div>
+                    </section>
+                <div class="hire-right grey lighten-3">
+                    <div th:if="${gig.gigHired} == true" >
+                        <div class="center-align">
+                            <h4 >Hired<i class="checkmark material-icons">check</i></h4>
+                            <div th:each="hired : ${hired}">
 
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div sec:authorize="hasRole('ROLE_MUSICIAN')" class="section">
-                                        <div class=" section center-align ">
-                                            <form  th:action="'/musician/gig/'+ @{${gig.id}} + '/apply'" method="post">
-                                                <input type="submit" class="waves-effect waves-light btn-large" value="Apply for Gig"/>
-                                            </form>
+                                <a th:href="'/find-bands/' + @{${hired.musicianProfile.id}}" >
+                                    <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.musicianProfile.profPicImage}} " class="cardImage hiredImage circle"/>
+                                    <h5 class="black-text"><b>[[${hired.musicianProfile.firstName}]] [[${hired.musicianProfile.lastName}]]</b></h5>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div th:if="${gig.gigHired} != true">
+                        <div class="section">
+                            <p class="center-align appliedNum"><span class="orange-text text-accent-4">[[${gig.getMusicianApplyGigs().size()}]]</span> Musicians Applied </p>
+                        </div>
+                        <div class="section ">
+                            <div class="row">
+                                <div th:each="applied : ${applied}">
+                                    <div class="container">
+                                        <div class="col s6 m3 l2">
+                                            <a th:href="'/find-bands/' + @{${applied.musicianProfile.id}}" >
+                                                <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}}" alt="" class="bandInfo hoverable bandApplied" />
+                                                <p class="center-align black-text">[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</p>
+                                            </a>
 
                                         </div>
                                     </div>
+                                </div>
 
                             </div>
 
+                        </div>
+                        <div  th:if="${gig.companyProfile.user.username == user.username}" class="section">
+                            <div class="center-align">
+                                <a class='dropdown-button logBtn hireBtn hoverable' href='#' data-activates='hireDrop'>Select to Hire</a>
+
+                            </div>
+
+                            <ul id="hireDrop" class="dropdown-content" >
+                                <li th:each="applied : ${applied}">
+                                    <a th:href="'/company/gig/' + @{${gig.id}} + '/confirm-hire/musician/' + @{${applied.musicianProfile.id}}" data-constrainwidth="false">
+                                        <div class="hireRow">
+                                            <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}} " class="navAvatar circle"/>
+                                            <p>[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</p>
+                                            <div class="divider"></div>
+                                        </div>
+
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div sec:authorize="hasRole('ROLE_MUSICIAN')" class="section">
+                            <div class=" section center-align ">
+                                <form  th:action="'/musician/gig/'+ @{${gig.id}} + '/apply'" method="post">
+                                    <input type="submit" class="logBtn hireBtn hoverable" value="Apply for Gig"/>
+                                </form>
+
+                            </div>
+                        </div>
 
                     </div>
+
+
                 </div>
             </div>
-
         </div>
+    </div>
+
+
     </main>
-    <div th:include="fragments/modals :: gigUpdate"></div>
+    <!--<div th:include="fragments/modals :: gigUpdate"></div>-->
     <div th:include="fragments/modals :: gigDelete"></div>
     <div th:include="fragments/footer :: footer"></div>
 
