--- a/src/main/resources/templates/musicianDetails.html
+++ b/src/main/resources/templates/musicianDetails.html
@@ -5,20 +5,8 @@
 <body class="grey lighten-1 music-details" th:inline="text">
 
     <main >
-        <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${musicianDetail.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+        <section class="indigo darken-4  profileBanner" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${musicianDetail.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
             <div th:include="fragments/navbar :: navHome"></div>
-            <div class="hide-on-med-and-down">
-                <div class="details-row white-text">
-                    <div class="row">
-                        <div class="col s6 offset-s5">
-                            <h3>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]] -- <span><small>[[${musicianDetail.location}]]</small></span></h3>
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
 
             <div class="show-on-medium-and-down hide-on-large-only">
                 <div class="tab-profile white-text">
@@ -41,6 +29,12 @@
                             </div>
                             <div class="profInfo white">
                                 <section >
+                                    <div class="section">
+                                        <h5 class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">account_circle</i> <b>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]]</b></h5>
+                                        <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">location_on</i> [[${musicianDetail.location}]]</p>
+
+                                    </div>
+                                    <div class="divider"></div>
                                     <div class="section">
                                         <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianDetail.musicianInstruments}]]</p>
 
@@ -135,91 +129,99 @@
             </section>
         </div>
         <div class="show-on-medium-and-down hide-on-large-only">
+<div class="profile-content">
 
-            <div class="row">
-                <div class="col s12">
-                    <ul class="tabs tabs-fixed-width z-depth-4 ">
-                        <li class="tab  "><a href="#tab-music"><i class="orange-text text-accent-4 material-icons">library_music</i></a></li>
-                        <li class="tab  "><a class="active" href="#tab-bio"><i class="orange-text text-accent-4 material-icons">account_circle</i></a></li>
-                        <li class="tab "><a href="#tab-upEvents"><i class="orange-text text-accent-4 material-icons">beenhere</i></a></li>
+    <div class="row">
+        <div class="col s12">
+            <ul class="tabs tabs-fixed-width z-depth-4 ">
+                <li class="tab  "><a href="#tab-music"><i class=" material-icons">library_music</i></a></li>
+                <li class="tab  "><a class="active" href="#tab-bio"><i class="material-icons">account_circle</i></a></li>
+                <li class="tab "><a href="#tab-upEvents"><i class=" material-icons">beenhere</i></a></li>
 
-                    </ul>
-                </div>
-                <div id="tab-bio" class="col s12 container">
-                    <div class="card-panel">
-                        <section >
-                            <div class="section">
-                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianDetail.musicianInstruments}]]</p>
+            </ul>
+        </div>
+        <div id="tab-bio" class="col s12 container">
+            <div class="card-panel">
+                <section >
+                    <div class="section">
+                        <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianDetail.musicianInstruments}]]</p>
 
-                            </div>
-
-                            <div class="divider"></div>
-                            <div class="section">
-                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianDetail.user.email}]] </p>
-                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianDetail.user.phoneNumber}]]</p>
-
-                            </div>
-
-                            <div class="divider"></div>
-                            <div class="section">
-                                <p class="center-align"> [[${musicianDetail.bio}]]</p>
-
-                            </div>
-
-                        </section>
                     </div>
-                </div>
-                <div id="tab-music" class="col s12 container">
-                    <h4 class="center-align card-panel">My Music</h4>
+
+                    <div class="divider"></div>
+                    <div class="section">
+                        <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianDetail.user.email}]] </p>
+                        <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianDetail.user.phoneNumber}]]</p>
+
+                    </div>
+
+                    <div class="divider"></div>
+                    <div class="section">
+                        <p class="center-align"> [[${musicianDetail.bio}]]</p>
+
+                    </div>
+
+                </section>
+            </div>
+        </div>
+        <div id="tab-music" class="col s12 container">
+            <div class="card-panel center-align">
+                <h4 >My Music
                     <div th:if="${media.isEmpty()}">
                         <h5>No Music</h5>
                     </div>
+                </h4>
+            </div>
 
 
-                    <table class="bordered highlight white">
-                        <tr th:each="media : ${media}">
-                            <td>
-                                <h5>
-                                    <a class="valign-wrapper popup-youtube" th:href="@{${media.media_url}}">
-                                        <i class="orange-text text-accent-4 material-icons">play_circle_filled</i>
-                                        [[${media.title}]]
-                                    </a>
-                                </h5>
+            <table class="bordered highlight white">
+                <tr th:each="media : ${media}">
+                    <td>
+                        <h5>
+                            <a class="valign-wrapper popup-youtube" th:href="@{${media.media_url}}">
+                                <i class="orange-text text-accent-4 material-icons">play_circle_filled</i>
+                                [[${media.title}]]
+                            </a>
+                        </h5>
 
-                            </td>
-                        </tr>
-                    </table>
+                    </td>
+                </tr>
+            </table>
 
+        </div>
+        <div id="tab-upEvents" class="col s12">
+            <div class="center-align card-panel">
+                <h4 >Upcoming Events</h4>
+                <div th:if="${hired.isEmpty()}">
+                    <h5 class="center-align">No Upcoming Events</h5>
                 </div>
-                <div id="tab-upEvents" class="col s12">
-                    <h4 class="center-align card-panel">Upcoming Events</h4>
-                    <div th:if="${hired.isEmpty()}">
-                        <h5 class="center-align">No Upcoming Events</h5>
-                    </div>
-                    <div class="row"  >
-                        <div class="col s12 m4" th:each="hired : ${hired}">
-                            <div  class="gigCard hoverable">
-                                <div class="gigImage" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
-                                    <div class="dateBox white orange-text text-accent-4 center-align">
-                                        <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
-                                        <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
-                                    </div>
-                                    <a class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
+            </div>
 
-                                </div>
-                                <div class="gigInfo white center-align">
-                                    <p><b>[[${hired.gig.gigTitle}]]</b></p>
-                                    <p >[[${hired.gig.gigLocation}]]</p>
-
-                                </div>
+            <div class="row"  >
+                <div class="col s12 m4" th:each="hired : ${hired}">
+                    <div  class="gigCard hoverable">
+                        <div class="gigImage" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                            <div class="dateBox white orange-text text-accent-4 center-align">
+                                <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
+                                <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
                             </div>
+                            <a class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
+
                         </div>
+                        <div class="gigInfo white center-align">
+                            <p><b>[[${hired.gig.gigTitle}]]</b></p>
+                            <p >[[${hired.gig.gigLocation}]]</p>
 
-
+                        </div>
                     </div>
                 </div>
+
 
             </div>
+        </div>
+
+    </div>
+</div>
         </div>
 
     </main>
